--- a/weatherapp.css
+++ b/weatherapp.css
@@ -46,6 +46,11 @@
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
+footer {
+    text-align: center;
+    font-family: monospace;
+}
+
 /*left side 3 row styling*/
 
 #top{
