--- a/weatherapp.css
+++ b/weatherapp.css
@@ -105,9 +105,8 @@ button {
 }
 
 /*text*/
-h1 {
-
-    background: -webkit-linear-gradient( #09203f 0%, #537895 100%);
+#city-name {
+    background: -webkit-linear-gradient(#09203f 0%, #537895 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: block;
